unpackaged/main/default/objects/Master_Contract__c/Master_Contract__c.object-meta.xml
<CustomObject>
    <description>Used when customers require multiple contracts to be represented by one master</description>
    <label>Master Contract</label>
    <nameField>
        <displayFormat>MBC-{YYYY}{0000}</displayFormat>
        <label>Master Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>