unpackaged/main/default/objects/Master_Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Contracts</relationshipLabel>
    <relationshipName>Master_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>