unpackaged/main/default/objects/Master_Contract__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract Term Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>