unpackaged/main/default/objects/Master_Contract__c/fields/Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date__c</fullName>
    <label>Contract Termination Date</label>
    <type>Date</type>
</CustomField>